Add opens for selector